hangar menu improvements

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
   <script src="src/hangar-system.js"></script>
   <script src="src/start-scene.js"></script>
   <script src="src/game.js"></script>
+  <!-- Next-Level Enhancement Systems -->
+  <script src="src/achievement-system.js"></script>
+  <script src="src/enhanced-gameplay.js"></script>
+  <script src="src/visual-audio-enhancements.js"></script>
+  <script src="src/social-multiplayer-systems.js"></script>
+  <script src="src/next-level-integration.js"></script>
 </body>
 <!--
 This root index.html enables GitHub Pages to serve the game from the repository root
